[package]
name = "binary-install"
description = "Install a binary from a path to a global cache"
authors = ["Rust and WebAssembly Working Group"]
repository = "https://github.com/rustwasm/binary-install"
license = "MIT/Apache-2.0"
version = "0.4.1"
documentation = "https://docs.rs/binary-install"
readme = "./README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.100"
ureq = {version = "2.12.1", features = ["socks-proxy"] }
dirs-next = "2.0.0"
flate2 = "1.1.5"
fs4 = "0.13.1"
hex = "0.4.3"
is_executable = "1.0.5"
siphasher = "1.0.1"
tar = "0.4.44"
zip = "6.0.0"

[dev-dependencies]
tempfile = "3.23.0"
